Fix flicker on login

--- a/app/components/category.styl
+++ b/app/components/category.styl
@@ -13,7 +13,7 @@
   }
 
   .success { text-align: center; }
-  
+
   .holder {
     display: flex;
     flex-flow: column wrap;
@@ -72,6 +72,7 @@
 
         .react-selectize.root-node {
           width: 80%;
+          text-align: left;
         }
       }
     }
